edit group button all functionality works except edit hierarchy and edit icon needs to be fixed